# JUCEPluginGeneratorStudio

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DISCLAIMER.md  FAQ.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  JUCE_SETUP.md  LICENSE.md  OPEN_SOURCE_IMPLEMENTATION.md  QUICKSTART.md  QUICK_START_OPEN_SOURCE.md  README.md  START_HERE.md  SYSTEM_SUMMARY.md  TESTING_GUIDE.md  VERIFICATION.md  setup.js  setup.sh
backend/: package-lock.json  package.json  server.js
backend/api/: generate.js  schema.js
backend/generators/: projectGenerator.js  templateEngine.js
backend/templates/juce_vst3/: .gitignore  CMakeLists.txt
backend/templates/juce_vst3/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/components/: FormRenderer.jsx  HelpPanel.jsx  StatusPanel.jsx
frontend/src/styles/: app.css  form.css  help-panel.css  index.css  status-panel.css
schema/: pluginSchema.json
